// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AptoFileUpload Renders Component 1`] = `
<div
  class="dropzone"
  tabindex="0"
>
  <span
    class="AptoIcon AptoIcon--size5 dropzone-addIcon"
  >
    <svg
      focusable="false"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width="100%"
    >
      <defs>
        <path
          d="M24 24H0V0h24v24z"
          id="addPhoto_svg__a"
        />
      </defs>
      <clippath
        id="addPhoto_svg__b"
      >
        <use
          overflow="visible"
          xlink:href="#addPhoto_svg__a"
        />
      </clippath>
      <path
        clip-path="url(#addPhoto_svg__b)"
        d="M3 4V1h2v3h3v2H5v3H3V6H0V4h3zm3 6V7h3V4h7l1.83 2H21c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V10h3zm7 9c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-3.2-5c0 1.77 1.43 3.2 3.2 3.2s3.2-1.43 3.2-3.2-1.43-3.2-3.2-3.2-3.2 1.43-3.2 3.2z"
      />
    </svg>
  </span>
  <input
    accept="image/png,image/jpeg"
    autocomplete="off"
    name="superName"
    style="display: none;"
    tabindex="-1"
    type="file"
  />
  <div>
    <span
      class="AptoButton AptoButton--button AptoButton--primary"
    >
      Choose File
       To Upload
    </span>
    <p
      class="AptoParagraph"
    >
      or drag and drop file
       here
    </p>
  </div>
  <p
    class="AptoParagraph fileSize"
  >
    (Max file size 
    5 MB
    )
  </p>
</div>
`;

exports[`AptoFileUpload Renders Component with previous image 1`] = `
<div
  class="dropzone-previousImage"
>
  <img
    alt=""
    src="http://foo.com/j.jpg"
  />
  <br />
  <button
    class="AptoButton AptoButton--link AptoButton--primary dropzone-change"
  >
    Remove 
    <span
      class="AptoIcon AptoIcon--size2 AptoIcon--inline"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`AptoFileUpload Renders Custom Image Component Class 1`] = `
<div
  class="dropzone-previousImage"
>
  <div>
    foo
  </div>
  <br />
  <button
    class="AptoButton AptoButton--link AptoButton--primary dropzone-change"
  >
    Remove 
    <span
      class="AptoIcon AptoIcon--size2 AptoIcon--inline"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`AptoFileUpload Renders Custom Image Function Component 1`] = `
<div
  class="dropzone-previousImage"
>
  <div>
    some custom image thingy
  </div>
  <br />
  <button
    class="AptoButton AptoButton--link AptoButton--primary dropzone-change"
  >
    Remove 
    <span
      class="AptoIcon AptoIcon--size2 AptoIcon--inline"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</div>
`;
